--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="/images/123.jpg" alt="Андрей Митрофанов">
+                    <img src="images/123.jpg" alt="Андрей Митрофанов">
                 </div>
                 <div class="about-text">
                     <h3>Начинающий Front-End разработчик</h3>
