--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         &lt;/&gt;
                     </div>
                     <h3>HTML</h3>
-                    <p>Создание правильной структуры веб-страниц с использованием HTML5.</p>
+                    <p>Создание правильной структуры веб-страниц с использованием HTML5</p>
                     <div class="skill-level">
                         <div class="skill-progress" style="width: 80%"></div>
                     </div>
@@ -73,7 +73,7 @@
                         #
                     </div>
                     <h3>CSS</h3>
-                    <p>Стилизация веб-страниц с использованием CSS3.</p>
+                    <p>Стилизация веб-страниц с использованием CSS3</p>
                     <p>  <br></p>
                     <div class="skill-level">
                         <div class="skill-progress" style="width: 70%"></div>
@@ -85,7 +85,7 @@
                         { }
                     </div>
                     <h3>JavaScript</h3>
-                    <p>Основы JavaScript для создания интерактивных элементов на веб-страницах.</p>
+                    <p>Основы JavaScript для создания интерактивных элементов на веб-страницах</p>
                     <div class="skill-level">
                         <div class="skill-progress" style="width: 50%"></div>
                     </div>
