--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Шапка сайта -->
     <header>
         <div class="container">
             <div class="logo">Андрей<span>Митрофанов</span></div>
@@ -21,7 +20,6 @@
         </div>
     </header>
 
-    <!-- Главная секция -->
     <section class="hero" id="home">
         <div class="container">
             <h1>Андрей Митрофанов</h1>
@@ -30,7 +28,6 @@
         </div>
     </section>
 
-    <!-- О себе -->
     <section class="about" id="about">
         <div class="container">
             <div class="section-title">
@@ -50,7 +47,6 @@
         </div>
     </section>
 
-    <!-- Навыки -->
     <section class="skills" id="skills">
         <div class="container">
             <div class="section-title">
@@ -93,5 +89,15 @@
             </div>
         </div>
     </section>
+
+    <section class="projects-section">
+        <div class="section-title"><h2>Мои работы</h2></div>
+        <div class="projects-container">
+          <div class="project-card">
+            <p class="project-description">Пример моего проекта: одностраничный сайт с адаптивной версткой.</p>
+            <a href="https://example.com" target="_blank" class="project-button">Смотреть сайт</a>
+          </div>
+        </div>
+      </section>
 </body>
 </html>
