--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="projects-container">
           <div class="project-card">
             <p class="project-description">Пример моего проекта: одностраничный сайт с адаптивной версткой.</p>
-            <a href="https://example.com" target="_blank" class="project-button">Смотреть сайт</a>
+            <a href="https://mitrofanus.github.io/example-site/" target="_blank" class="project-button">Смотреть сайт</a>
           </div>
         </div>
       </section>
